동적계획법 1 # 9

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -275,7 +275,59 @@
    "execution_count": null,
    "id": "c57fe605",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "-1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t1912\t 연속합\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5\n",
+    "-1 -2 -3 -4 -5''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "\n",
+    "nums = tuple(map(int, input().split()))\n",
+    "MAX = max(nums)\n",
+    "\n",
+    "before_sum = list(nums)\n",
+    "next_sum = [0] * N\n",
+    "\n",
+    "# print(before_sum)\n",
+    "for i in range(1, N):\n",
+    "    for j in range(i, N):\n",
+    "        temp = before_sum[j-1] + nums[j]\n",
+    "        MAX = max(MAX, temp)\n",
+    "        next_sum[j] = temp\n",
+    "    # print(next_sum)\n",
+    "    before_sum, next_sum = next_sum, before_sum\n",
+    "    # next_sum = [0] * N\n",
+    "    \n",
+    "print(MAX)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 39,
+   "id": "98ea194a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
    "source": [
     "# 5\t1912\t 연속합\n",
     "import sys\n",
@@ -285,11 +337,16 @@
     "10 -4 3 1 5 6 -35 12 21 -1''')\n",
     "\n",
     "input = sys.stdin.readline\n",
-    "\n",
-    "\n",
     "N = int(input())\n",
     "\n",
+    "nums = list(map(int, input().split()))\n",
     "\n",
+    "cur = best = nums[0]\n",
+    "for x in nums[1:]:\n",
+    "    cur = max(x, cur + x)   # x로 새로 시작 vs 이어붙이기\n",
+    "    best = max(best, cur)\n",
+    "\n",
+    "print(best)\n",
     "\n",
     "\n",
     "\n"
@@ -297,22 +354,291 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 64,
    "id": "6a3c1297",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "253\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t1149\t RGB거리"
+    "# 6\t1149\t RGB거리\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "71 39 44\n",
+    "32 83 55\n",
+    "51 37 63\n",
+    "89 29 100\n",
+    "83 58 11\n",
+    "65 13 15\n",
+    "47 25 29\n",
+    "60 66 19''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "\n",
+    "MAX = 10**7\n",
+    "price = 0\n",
+    "min_price = MAX\n",
+    "colors = [\"r\", \"g\", \"b\"]\n",
+    "\n",
+    "prices = [tuple(map(int, input().split())) for _ in range(N)] \n",
+    "def dfs(house:int, color=\"s\"):\n",
+    "    global min_price, price\n",
+    "    \n",
+    "    if price > min_price:\n",
+    "        return\n",
+    "    \n",
+    "    if house > N :\n",
+    "        min_price = min(min_price, price)\n",
+    "        return \n",
+    "\n",
+    "    for i in range(3):\n",
+    "        if not colors[i] == color:\n",
+    "            price += prices[house-1][i]\n",
+    "            dfs(house + 1, colors[i])\n",
+    "            price -= prices[house-1][i]\n",
+    "dfs(1)\n",
+    "print(min_price)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "41d9922f",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "253\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t1149\t RGB거리\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "71 39 44\n",
+    "32 83 55\n",
+    "51 37 63\n",
+    "89 29 100\n",
+    "83 58 11\n",
+    "65 13 15\n",
+    "47 25 29\n",
+    "60 66 19''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "dp = [list(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "for i in range(1, N):\n",
+    "    dp[i][0] += min(dp[i-1][1], dp[i-1][2])  # i번째 집을 R\n",
+    "    dp[i][1] += min(dp[i-1][0], dp[i-1][2])  # G\n",
+    "    dp[i][2] += min(dp[i-1][0], dp[i-1][1])  # B\n",
+    "\n",
+    "print(min(dp[N-1]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9a45537d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "253\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "\n",
+    "import sys\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "71 39 44\n",
+    "32 83 55\n",
+    "51 37 63\n",
+    "89 29 100\n",
+    "83 58 11\n",
+    "65 13 15\n",
+    "47 25 29\n",
+    "60 66 19''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "prev = list(map(int, input().split()))\n",
+    "\n",
+    "for _ in range(1, N):\n",
+    "    r, g, b = map(int, input().split())\n",
+    "\n",
+    "    cur_r = r + min(prev[1], prev[2])\n",
+    "    cur_g = g + min(prev[0], prev[2])\n",
+    "    cur_b = b + min(prev[0], prev[1])\n",
+    "\n",
+    "    prev = [cur_r, cur_g, cur_b]\n",
+    "\n",
+    "print(min(prev))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9567de7a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "253\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 6\t1149\t RGB거리\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "71 39 44\n",
+    "32 83 55\n",
+    "51 37 63\n",
+    "89 29 100\n",
+    "83 58 11\n",
+    "65 13 15\n",
+    "47 25 29\n",
+    "60 66 19''')\n",
+    "\n",
+    "sys.setrecursionlimit(10**6)\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "prices = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "INF = 10**9\n",
+    "memo = [[-1]*3 for _ in range(N)]\n",
+    "\n",
+    "def dfs(house, prev):\n",
+    "    if house == N:\n",
+    "        return 0\n",
+    "\n",
+    "    if prev != -1 and memo[house][prev] != -1:\n",
+    "        return memo[house][prev]\n",
+    "\n",
+    "    res = INF\n",
+    "    for c in range(3):\n",
+    "        if c != prev:\n",
+    "            res = min(res, prices[house][c] + dfs(house+1, c))\n",
+    "\n",
+    "    if prev != -1:\n",
+    "        memo[house][prev] = res\n",
+    "    return res\n",
+    "\n",
+    "print(dfs(0, -1))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
    "id": "3fcb78ff",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
-    "# 7\t1932\t 정수 삼각형"
+    "# 7\t1932\t 정수 삼각형\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5\n",
+    "7\n",
+    "3 8\n",
+    "8 1 0\n",
+    "2 7 4 4\n",
+    "4 5 2 6 5''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "max_sums = [[0] * (N + 1) for _ in range(N + 1)]\n",
+    "\n",
+    "\n",
+    "for row in range(1, N + 1):\n",
+    "    nums = tuple(map(int, input().split()))\n",
+    "    for col in range(len(nums)):\n",
+    "        upleft = max_sums[row-1][col] + nums[col]\n",
+    "        upright = max_sums[row-1][col+1] + nums[col]\n",
+    "        max_sums[row][col+1] = max(upleft, upright )\n",
+    "\n",
+    "print(max(max_sums[N]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3be6dbbd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 7\t1932\t 정수 삼각형\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5\n",
+    "7\n",
+    "3 8\n",
+    "8 1 0\n",
+    "2 7 4 4\n",
+    "4 5 2 6 5''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "dp = [0] * (N + 1)\n",
+    "\n",
+    "for i in range(1, N + 1):\n",
+    "    nums = list(map(int, input().split()))\n",
+    "    for j in range(i, 0, -1):\n",
+    "        dp[j] = max(dp[j-1], dp[j]) + nums[j-1]\n",
+    "\n",
+    "print(max(dp))\n"
    ]
   },
   {
@@ -320,9 +646,53 @@
    "execution_count": null,
    "id": "42cf9690",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75\n"
+     ]
+    }
+   ],
    "source": [
-    "# 8\t2579\t 계단 오르기"
+    "# 8\t2579\t 계단 오르기\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6\n",
+    "10\n",
+    "20\n",
+    "15\n",
+    "25\n",
+    "10\n",
+    "20''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "first = int(input())\n",
+    "\n",
+    "\n",
+    "if N == 1:\n",
+    "    print(first)\n",
+    "    sys.exit(0)\n",
+    "\n",
+    "# [n][0] =  n번째 밟았을 때 1칸 뛰기가 가능한 최대값. (2칸뛰었거나, 1칸 한번만 뛴 경우)\n",
+    "# [n][1] =  n번째 밟았을 때 1칸 뛰기가 불가능 한 최대값 (1번 을 두 번 뛰어 온 값)\n",
+    "\n",
+    "second = int(input())\n",
+    "scores = [[0] * 2 for _ in range(N + 1)]\n",
+    "\n",
+    "scores[1] = [first, 0]\n",
+    "scores[2] = [second, first + second]\n",
+    "\n",
+    "for n in range(3, N + 1):\n",
+    "    score = int(input())\n",
+    "    scores[n][0] = max(scores[n-2]) + score\n",
+    "    scores[n][1] = scores[n-1][0] + score\n",
+    "\n",
+    "print(max(scores[N]))\n"
    ]
   },
   {
@@ -330,9 +700,79 @@
    "execution_count": null,
    "id": "8bfde8a0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 9\t1463\t 1로 만들기"
+    "# 9\t1463\t 1로 만들기\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10''') \n",
+    "#  입력이 1, 2 일때 오류\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "min_values = [0] * (N + 1)\n",
+    "min_values[1:4] = [1, 1, 1]\n",
+    "\n",
+    "for n in range(4, N + 1):\n",
+    "    lst = [min_values[n-1]]\n",
+    "    if n % 3 == 0:\n",
+    "         lst.append(min_values[n//3]) \n",
+    "\n",
+    "    if n % 2 == 0:\n",
+    "        lst.append(min_values[n//2])\n",
+    "\n",
+    "    min_values[n] = min(lst) + 1\n",
+    "    \n",
+    "print(min_values[N])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5293238e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 9\t1463\t 1로 만들기\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10''') \n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "\n",
+    "dp = [0] * (N + 1)  # dp[1] = 0 (이미 1)\n",
+    "\n",
+    "for n in range(2, N + 1):\n",
+    "    dp[n] = dp[n - 1] + 1          # 1 빼기\n",
+    "    if n % 2 == 0:\n",
+    "        dp[n] = min(dp[n], dp[n // 2] + 1)\n",
+    "    if n % 3 == 0:\n",
+    "        dp[n] = min(dp[n], dp[n // 3] + 1)\n",
+    "\n",
+    "print(dp[N])"
    ]
   },
   {
@@ -408,7 +848,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
