동적계획 1 #11 푸는중

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -777,12 +777,85 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 44,
    "id": "32a09e53",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "516874370\n"
+     ]
+    }
+   ],
    "source": [
-    "# 10\t10844\t 쉬운 계단 수"
+    "# 10\t10844\t 쉬운 계단 수\n",
+    "import sys \n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''45''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "MAX = 10**9\n",
+    "\n",
+    "dp = [[1]*10 for _ in range(N + 1)]\n",
+    "dp[1][0] = 0\n",
+    "\n",
+    "for n in range(2, N+1):\n",
+    "    for m in range(10):\n",
+    "        if m == 0:\n",
+    "            dp[n][0] = dp[n-1][1] % MAX\n",
+    "        \n",
+    "        elif m == 9:\n",
+    "            dp[n][9] = dp[n-1][8] % MAX\n",
+    "\n",
+    "        else:\n",
+    "            dp[n][m] = (dp[n-1][m-1] + dp[n-1][m+1]) % MAX\n",
+    "\n",
+    "print(sum(dp[N])% MAX)\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "1243e2e7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "516874370\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 10\t10844\t 쉬운 계단 수\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''45''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "MOD = 1_000_000_000\n",
+    "\n",
+    "N = int(input().strip())\n",
+    "\n",
+    "prev = [0] + [1] * 9\n",
+    "cur = [0] * 10\n",
+    "\n",
+    "for _ in range(2, N + 1):\n",
+    "    cur[0] = prev[1]\n",
+    "    cur[9] = prev[8]\n",
+    "    for d in range(1, 9):\n",
+    "        cur[d] = (prev[d - 1] + prev[d + 1]) % MOD\n",
+    "    prev, cur = cur, prev\n",
+    "\n",
+    "print(sum(prev) % MOD)\n"
    ]
   },
   {
@@ -790,9 +863,52 @@
    "execution_count": null,
    "id": "49131b37",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "33\n"
+     ]
+    }
+   ],
    "source": [
-    "# 11\t2156\t 포도주 시식"
+    "# 11\t2156\t 포도주 시식\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''6\n",
+    "6\n",
+    "10\n",
+    "13\n",
+    "9\n",
+    "8\n",
+    "1''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "wine = [0] * (N + 1)\n",
+    "for i in range(1, N + 1):\n",
+    "    wine[i] = int(input())\n",
+    "\n",
+    "dp = [0] * (N + 1)\n",
+    "\n",
+    "if N >= 1:\n",
+    "    dp[1] = wine[1]\n",
+    "if N >= 2:\n",
+    "    dp[2] = wine[1] + wine[2]\n",
+    "\n",
+    "for i in range(3, N + 1):\n",
+    "    dp[i] = max(\n",
+    "        dp[i-1],\n",
+    "        dp[i-2] + wine[i],\n",
+    "        dp[i-3] + wine[i-1] + wine[i]\n",
+    "    )\n",
+    "\n",
+    "print(dp[N])\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -848,7 +964,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
