동적게획법 1 # 12

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -913,12 +913,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "ed76c727",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
    "source": [
-    "# 12\t11053\t 가장 긴 증가하는 부분 수열"
+    "# 12\t11053\t 가장 긴 증가하는 부분 수열\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''9\n",
+    "3 10 2 1 20 4 6 7 8''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "dp = [1] * N  # 최소는 자기 자신만 선택\n",
+    "\n",
+    "for i in range(N):\n",
+    "    for j in range(i):\n",
+    "        if A[j] < A[i]:\n",
+    "            dp[i] = max(dp[i], dp[j] + 1)\n",
+    "\n",
+    "print(max(dp))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "6e47bffd",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 12\t11053\t 가장 긴 증가하는 부분 수열\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''9\n",
+    "3 10 2 1 20 4 6 7 8''')\n",
+    "\n",
+    "from bisect import bisect_left\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
+    "\n",
+    "tails = []\n",
+    "\n",
+    "for x in A:\n",
+    "    i = bisect_left(tails, x)\n",
+    "    if i == len(tails):\n",
+    "        tails.append(x)\n",
+    "    else:\n",
+    "        tails[i] = x\n",
+    "\n",
+    "print(len(tails))\n"
    ]
   },
   {
@@ -926,9 +995,33 @@
    "execution_count": null,
    "id": "24417c88",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n"
+     ]
+    }
+   ],
    "source": [
-    "# 13\t11054\t 가장 긴 바이토닉 부분 수열"
+    "# 13\t11054\t 가장 긴 바이토닉 부분 수열\n",
+    "\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10\n",
+    "1 5 2 1 4 3 4 5 2 1''')\n",
+    "\n",
+    "from bisect import bisect_left\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "\n",
+    "print(N)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
@@ -964,7 +1057,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
