동적계획법 1 #14

--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -913,7 +913,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "id": "ed76c727",
    "metadata": {},
    "outputs": [
@@ -1000,7 +1000,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "10\n"
+      "7\n"
      ]
     }
    ],
@@ -1017,21 +1017,76 @@
     "\n",
     "input = sys.stdin.readline\n",
     "N = int(input())\n",
+    "A = list(map(int, input().split()))\n",
     "\n",
-    "print(N)\n",
+    "left_nums = [0] * N  # 왼쪽에 이어 붙일 수 있는 숫자 개수\n",
+    "right_nums = [0] * N # 오른쪽에 이어 붙일 수 있는 숫자 개수\n",
     "\n",
     "\n",
-    "\n"
+    "for i in range(N):\n",
+    "    for j in range(i):\n",
+    "        if A[j] < A[i]:\n",
+    "            left_nums[i] = max(left_nums[j] + 1, left_nums[i])\n",
+    "\n",
+    "for i in range(N-1, -1, -1):\n",
+    "    for j in range(N-1, i, -1):\n",
+    "        if A[j] < A[i]:\n",
+    "            right_nums[i] = max(right_nums[j] + 1, right_nums[i])\n",
+    "\n",
+    "result = [left_nums[i] + right_nums[i] + 1 for i in range(N)]\n",
+    "print(max(result))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "id": "8d03405a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3\n"
+     ]
+    }
+   ],
    "source": [
-    "# 14\t2565\t 전깃줄"
+    "# 14\t2565\t 전깃줄\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''8\n",
+    "1 8\n",
+    "3 9\n",
+    "2 2\n",
+    "4 1\n",
+    "6 4\n",
+    "10 10\n",
+    "9 7\n",
+    "7 6''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "N = int(input())\n",
+    "lines = list(tuple(map(int, input().split())) for _ in range(N))\n",
+    "lines.sort()\n",
+    "\n",
+    "nums = [b for _, b in lines]\n",
+    "\n",
+    "dp = [1] * N\n",
+    "\n",
+    "for i in range(N):\n",
+    "    next = nums[i]\n",
+    "    best = 0\n",
+    "    for j in range(i):\n",
+    "        if nums[j] < next:\n",
+    "            temp = dp[j]\n",
+    "            if best < temp: \n",
+    "                best = temp\n",
+    "    dp[i] = best + 1\n",
+    "\n",
+    "print(N - max(dp))"
    ]
   },
   {
@@ -1057,7 +1112,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "251117_MathForPython",
+   "display_name": ".venv (3.13.9)",
    "language": "python",
    "name": "python3"
   },
