--- a/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C21_동적_계획법_1.ipynb
@@ -1091,28 +1091,132 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "dfba3b66",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n"
+     ]
+    }
+   ],
    "source": [
-    "# 15\t9251\t LCS"
+    "# 15\t9251\t LCS\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''ACAYKP\n",
+    "CAPCAK''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "A = input().rstrip()\n",
+    "B = input().rstrip()\n",
+    "\n",
+    "n, m = len(A), len(B)\n",
+    "dp = [[0] * (m + 1) for _ in range(n + 1)]\n",
+    "\n",
+    "# dp[i][j] A의 앞에서부터 i번째 글짜와, B의 앞에서부터 j번째 글짜까지의 최장 공통 부분 수열의 값을 저장. \n",
+    "\n",
+    "for i in range(1, n + 1):\n",
+    "    for j in range(1, m + 1):\n",
+    "        if A[i - 1] == B[j - 1]:\n",
+    "            dp[i][j] = dp[i - 1][j - 1] + 1\n",
+    "        else:\n",
+    "            dp[i][j] = max(dp[i - 1][j], dp[i][j - 1])\n",
+    "\n",
+    "    # for row in dp:\n",
+    "    #     print(*row)\n",
+    "    # print()\n",
+    "\n",
+    "print(dp[n][m])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "e6f564f6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "14\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 16\t12865\t 평범한 배낭\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 7\n",
+    "6 13\n",
+    "4 8\n",
+    "3 6\n",
+    "5 12''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, K = map(int, input().split())\n",
+    "items = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "dp = [[0] * (K + 1) for _ in range(N + 1)]\n",
+    "# dp[i][w] = 앞에서 i번째 물건까지 고려했을 때, 배낭 무게 w 이하로 얻을 수 있는 최대 가치\n",
+    "\n",
+    "for i in range(1, N + 1):\n",
+    "    W, V = items[i - 1]\n",
+    "    for w in range(K + 1):\n",
+    "        # 안넣는 경우\n",
+    "        dp[i][w] = dp[i - 1][w]\n",
+    "\n",
+    "        #넣는 경우\n",
+    "        if w >= W:\n",
+    "            dp[i][w] = max(dp[i][w], dp[i -1][w - W] + V)\n",
+    "\n",
+    "print(dp[N][K])"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e6f564f6",
+   "id": "c6470523",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 16\t12865\t 평범한 배낭"
+    "# 16\t12865\t 평범한 배낭\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 7\n",
+    "6 13\n",
+    "4 8\n",
+    "3 6\n",
+    "5 12''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, K = map(int, input().split())\n",
+    "items = [tuple(map(int, input().split())) for _ in range(N)]  # (W, V)\n",
+    "\n",
+    "dp = [0] * (K + 1)\n",
+    "\n",
+    "for w, v in items:\n",
+    "    # 뒤에서 앞으로: 같은 물건을 2번 쓰는 걸 방지(0/1)\n",
+    "    for cap in range(K, w - 1, -1):\n",
+    "        dp[cap] = max(dp[cap], dp[cap - w] + v)\n",
+    "\n",
+    "print(dp[K])\n"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv (3.13.9)",
+   "display_name": "251117_MathForPython",
    "language": "python",
    "name": "python3"
   },
