--- a/A02_BAEKJOON/B01_Step/_21-30/C22_누적_합.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C22_누적_합.ipynb
@@ -129,7 +129,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 33,
    "id": "a8bcb16d",
    "metadata": {},
    "outputs": [
@@ -137,11 +137,10 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "a 0 5\n",
-      "a 0 6\n",
-      "a 6 10\n",
-      "a 7 10\n",
-      "\n"
+      "0\n",
+      "1\n",
+      "2\n",
+      "1\n"
      ]
     }
    ],
@@ -156,19 +155,92 @@
     "a 0 6\n",
     "a 6 10\n",
     "a 7 10''')\n",
-    "\n",
     "input = sys.stdin.readline\n",
     "\n",
-    "S = input().rstrip()\n",
+    "S = input().strip()\n",
     "q = int(input())\n",
+    "n = len(S)\n",
+    "\n",
+    "# prefix[c][i] = S[:i]에서 문자 c의 개수 (i는 0..n)\n",
+    "prefix = [[0] * (n + 1) for _ in range(26)]\n",
+    "\n",
+    "for i, ch in enumerate(S, start=1):\n",
+    "    idx = ord(ch) - 97\n",
+    "    for c in range(26):\n",
+    "        prefix[c][i] = prefix[c][i - 1]\n",
+    "    prefix[idx][i] += 1\n",
     "\n",
     "out = []\n",
     "for _ in range(q):\n",
     "    a, l, r = input().split()\n",
-    "    print(a, l, r)\n",
+    "    l = int(l); r = int(r)\n",
+    "    c = ord(a) - 97\n",
+    "    out.append(str(prefix[c][r + 1] - prefix[c][l]))\n",
     "\n",
+    "print(\"\\n\".join(out))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "f1084deb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "1"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "7"
+      ]
+     },
+     "execution_count": 34,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# 3\t16139\t 인간-컴퓨터 상호작용\n",
+    "import sys\n",
     "\n",
-    "print(\"\\n\".join(out))"
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''seungjaehwang\n",
+    "4\n",
+    "a 0 5\n",
+    "a 0 6\n",
+    "a 6 10\n",
+    "a 7 10''')\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "S = input().strip()\n",
+    "q = int(input())\n",
+    "n = len(S)\n",
+    "\n",
+    "# prefix[i][c] = S[:i]에서 문자 c의 개수\n",
+    "prefix = [[0]*26 for _ in range(n+1)]\n",
+    "\n",
+    "for i, ch in enumerate(S, 1):\n",
+    "    row = prefix[i]\n",
+    "    prev = prefix[i-1]\n",
+    "    row[:] = prev            # C레벨로 26개 복사 (파이썬 for 26번보다 보통 빠름)\n",
+    "    row[ord(ch)-97] += 1\n",
+    "\n",
+    "out = []\n",
+    "for _ in range(q):\n",
+    "    a, l, r = input().split()\n",
+    "    c = ord(a) - 97\n",
+    "    l = int(l); r = int(r) + 1\n",
+    "    out.append(str(prefix[r][c] - prefix[l][c]))\n",
+    "\n",
+    "sys.stdout.write(\"\\n\".join(out))\n"
    ]
   },
   {
@@ -178,7 +250,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# 4\t10986\t 나머지 합"
+    "# 4\t10986\t 나머지 합\n",
+    "\n"
    ]
   },
   {
