--- a/A02_BAEKJOON/B01_Step/_21-30/C22_누적_합.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C22_누적_합.ipynb
@@ -245,33 +245,326 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "id": "269a3a04",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
    "source": [
     "# 4\t10986\t 나머지 합\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 3\n",
+    "1 2 3 1 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "A = tuple(map(int, input().split()))\n",
+    "\n",
+    "prefix = [0] * (N + 1)\n",
+    "counter = 0\n",
+    "\n",
+    "for i in range(1, N + 1):\n",
+    "    prefix[i] = (prefix[i - 1] + A[i - 1]) % M\n",
+    "    if prefix[i] == 0:          # 0..i-1 구간\n",
+    "        counter += 1\n",
+    "\n",
+    "for i in range(1, N):           # i=1부터: 0..k 구간 중복 방지\n",
+    "    for j in range(i + 1, N + 1):\n",
+    "        if (prefix[j] - prefix[i]) % M == 0:\n",
+    "            counter += 1\n",
+    "\n",
+    "print(counter)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "id": "7e25d5a1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''5 3\n",
+    "1 2 3 1 2''')\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "A = map(int, input().split())\n",
+    "\n",
+    "cnt = [0] * M\n",
+    "prefix = 0\n",
+    "\n",
+    "# prefix % M 값들의 빈도를 센다\n",
+    "# prefix가 0인 케이스를 조합으로 자연스럽게 처리하려고 cnt[0]=1로 시작\n",
+    "cnt[0] = 1\n",
+    "\n",
+    "for x in A:\n",
+    "    prefix = (prefix + x) % M\n",
+    "    cnt[prefix] += 1\n",
+    "\n",
+    "# 같은 나머지에서 2개를 고르는 조합 수를 합산\n",
+    "ans = 0\n",
+    "for c in cnt:\n",
+    "    ans += c * (c - 1) // 2\n",
+    "\n",
+    "print(ans)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "id": "83bab9bb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "27\n",
+      "6\n",
+      "64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 5\t11660\t 구간 합 구하기 5\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4 3\n",
+    "1 2 3 4\n",
+    "2 3 4 5\n",
+    "3 4 5 6\n",
+    "4 5 6 7\n",
+    "2 2 3 4\n",
+    "3 4 3 4\n",
+    "1 1 4 4''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M = map(int, input().split())\n",
+    "\n",
+    "matrix = [tuple(map(int, input().split())) for _ in range(N)]\n",
+    "\n",
+    "\n",
+    "prefix = [[0] * (N + 1) for _ in range(N + 1)]\n",
+    "\n",
+    "for i in range(1, N + 1):\n",
+    "    for j in range(1, N + 1):\n",
+    "        prefix[i][j] = (\n",
+    "            prefix[i][j-1] \n",
+    "            + prefix[i-1][j] \n",
+    "            - prefix[i-1][j-1] \n",
+    "            + matrix[i-1][j-1]\n",
+    "        )\n",
+    "\n",
+    "out = [0] * M\n",
+    "for i in range(M):\n",
+    "    x1, y1, x2, y2 = map(int, input().split())\n",
+    "    ans = (\n",
+    "        prefix[x2][y2] \n",
+    "        - prefix[x1-1][y2] \n",
+    "        - prefix[x2][y1-1] \n",
+    "        + prefix[x1-1][y1-1]\n",
+    "    )\n",
+    "    out[i] = str(ans) \n",
+    "\n",
+    "print(\"\\n\".join(out))\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "83bab9bb",
+   "execution_count": 28,
+   "id": "5f321116",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
    "source": [
-    "# 5\t11660\t 구간 합 구하기 5\n"
+    "# 6\t25682\t 체스판 다시 칠하기 2\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10 13 10\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "WWWWWWWWWWBWB\n",
+    "WWWWWWWWWWBWB''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M, K = map(int, input().split())\n",
+    "\n",
+    "\n",
+    "board = [input().strip() for _ in range(N)]\n",
+    "\n",
+    "# 2D prefix sum 만들기 함수\n",
+    "def build_prefix(mismatch):\n",
+    "    ps = [[0] * (M + 1) for _ in range(N + 1)]\n",
+    "    for i in range(1, N + 1):\n",
+    "        row_sum = 0\n",
+    "        for j in range(1, M + 1):\n",
+    "            row_sum += mismatch[i - 1][j - 1]\n",
+    "            ps[i][j] = ps[i - 1][j] + row_sum\n",
+    "    return ps\n",
+    "\n",
+    "# (i, j)가 시작색 start('B' or 'W')인 체스판과 맞는지 체크\n",
+    "# (i+j)%2==0 이면 start, 아니면 반대색\n",
+    "def expected_color(i, j, start):\n",
+    "    if (i + j) % 2 == 0:\n",
+    "        return start\n",
+    "    return 'W' if start == 'B' else 'B'\n",
+    "\n",
+    "# mismatch_B[i][j] = 시작이 'B'인 패턴과 다르면 1\n",
+    "# mismatch_W[i][j] = 시작이 'W'인 패턴과 다르면 1\n",
+    "mismatch_B = [[0] * M for _ in range(N)]\n",
+    "mismatch_W = [[0] * M for _ in range(N)]\n",
+    "\n",
+    "for i in range(N):\n",
+    "    row = board[i]\n",
+    "    for j in range(M):\n",
+    "        c = row[j]\n",
+    "        if c != expected_color(i, j, 'B'):\n",
+    "            mismatch_B[i][j] = 1\n",
+    "        if c != expected_color(i, j, 'W'):\n",
+    "            mismatch_W[i][j] = 1\n",
+    "\n",
+    "psB = build_prefix(mismatch_B)\n",
+    "psW = build_prefix(mismatch_W)\n",
+    "\n",
+    "def rect_sum(ps, x1, y1, x2, y2):\n",
+    "    # (x1,y1)~(x2,y2) inclusive, 0-indexed\n",
+    "    return ps[x2 + 1][y2 + 1] - ps[x1][y2 + 1] - ps[x2 + 1][y1] + ps[x1][y1]\n",
+    "\n",
+    "ans = 10**18\n",
+    "for x in range(N - K + 1):\n",
+    "    for y in range(M - K + 1):\n",
+    "        x2, y2 = x + K - 1, y + K - 1\n",
+    "        repaintB = rect_sum(psB, x, y, x2, y2)\n",
+    "        repaintW = rect_sum(psW, x, y, x2, y2)\n",
+    "        ans = min(ans, repaintB, repaintW)\n",
+    "\n",
+    "print(ans)\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5f321116",
+   "execution_count": 31,
+   "id": "02b9068f",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n"
+     ]
+    }
+   ],
    "source": [
-    "# 6\t25682\t 체스판 다시 칠하기 2"
+    "# 6\t25682\t 체스판 다시 칠하기 2\n",
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''10 13 10\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "BBBBBBBBWBWBW\n",
+    "BBBBBBBBBWBWB\n",
+    "WWWWWWWWWWBWB\n",
+    "WWWWWWWWWWBWB''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N, M, K = map(int, input().split())\n",
+    "board = [input().strip() for _ in range(N)]  # bytes\n",
+    "\n",
+    "# ps[i][j] = (0,0)~(i-1,j-1)에서 \"B로 시작하는 체스패턴\"과 불일치 개수\n",
+    "ps = [[0] * (M + 1) for _ in range(N + 1)]\n",
+    "\n",
+    "B = ord('B')\n",
+    "W = ord('W')\n",
+    "\n",
+    "for i in range(N):\n",
+    "    row = board[i]\n",
+    "    row_sum = 0\n",
+    "\n",
+    "    # (i,0)에서 기대 색 (B-start pattern 기준)\n",
+    "    # i가 짝수면 (i,0)은 'B', 홀수면 'W'\n",
+    "    exp = B if (i & 1) == 0 else W\n",
+    "\n",
+    "    for j in range(M):\n",
+    "        # 불일치면 1\n",
+    "        if row[j] != exp:\n",
+    "            row_sum += 1\n",
+    "\n",
+    "        # prefix 누적\n",
+    "        ps[i + 1][j + 1] = ps[i][j + 1] + row_sum\n",
+    "\n",
+    "        # 다음 칸 기대 색 토글\n",
+    "        exp = W if exp == B else B\n",
+    "\n",
+    "kk = K * K\n",
+    "ans = 10**18\n",
+    "\n",
+    "# KxK 윈도우 합을 O(1)로 계산\n",
+    "for x in range(N - K + 1):\n",
+    "    x2 = x + K\n",
+    "    psx = ps[x]\n",
+    "    psx2 = ps[x2]\n",
+    "    for y in range(M - K + 1):\n",
+    "        y2 = y + K\n",
+    "        repaintB = psx2[y2] - psx[y2] - psx2[y] + psx[y]\n",
+    "        # W-start는 반대패턴이라 kk - repaintB\n",
+    "        if repaintB > kk - repaintB:\n",
+    "            repaintB = kk - repaintB\n",
+    "        if repaintB < ans:\n",
+    "            ans = repaintB\n",
+    "\n",
+    "print(ans)\n",
+    "\n"
    ]
   }
  ],
