그리디 알고리즘 끝

--- a/A02_BAEKJOON/B01_Step/_21-30/C23_그리디_알고리즘_1.ipynb
+++ b/A02_BAEKJOON/B01_Step/_21-30/C23_그리디_알고리즘_1.ipynb
@@ -284,19 +284,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "18a678a2",
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(5, 2, 4, 1)"
-      ]
-     },
-     "execution_count": 54,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
     }
    ],
    "source": [
@@ -313,7 +310,59 @@
     "N = int(input())\n",
     "\n",
     "kms = tuple(map(int, input().split()))\n",
-    "prices = tuple(map(int, input().split()))\n"
+    "prices = tuple(map(int, input().split()))\n",
+    "\n",
+    "end = len(prices) - 1\n",
+    "\n",
+    "price = 0\n",
+    "\n",
+    "while 0 < end:\n",
+    "    min_price = min(prices[:end])\n",
+    "    end = prices.index(min_price)\n",
+    "    price += min_price * sum(kms[end:])\n",
+    "    kms = kms[0:end]\n",
+    "    \n",
+    "print(price)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "bcfd50e4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "import sys\n",
+    "\n",
+    "from io import StringIO\n",
+    "sys.stdin = StringIO('''4\n",
+    "2 3 1\n",
+    "5 2 4 1''')\n",
+    "\n",
+    "\n",
+    "input = sys.stdin.readline\n",
+    "\n",
+    "N = int(input())\n",
+    "kms = list(map(int, input().split()))      # 길이 N-1\n",
+    "prices = list(map(int, input().split()))   # 길이 N\n",
+    "\n",
+    "min_price = prices[0]\n",
+    "total = 0\n",
+    "\n",
+    "for i in range(N - 1):\n",
+    "    if prices[i] < min_price:\n",
+    "        min_price = prices[i]\n",
+    "    total += min_price * kms[i]\n",
+    "\n",
+    "print(total)\n"
    ]
   }
  ],
